# key4hep-reco-validation

./: .gitignore  CMakeLists.txt  README.md  code.org  conf.yaml  matplotlib_utils.py  matplotlibrc  test_rdf.py
data/: Z_uds_gen_11619_10_000.stdhep  Z_uds_gen_11619_10_001.stdhep  Z_uds_gen_11619_10_002.stdhep  Z_uds_gen_11619_10_003.stdhep  Z_uds_gen_11619_10_004.stdhep  Z_uds_gen_11619_10_005.stdhep  Z_uds_gen_11619_10_006.stdhep  Z_uds_gen_11619_10_007.stdhep  Z_uds_gen_11619_10_008.stdhep  Z_uds_gen_11619_10_009.stdhep  Z_uds_gen_11619_10_010.stdhep  Z_uds_gen_11619_10_011.stdhep  Z_uds_gen_11619_10_012.stdhep  Z_uds_gen_11619_10_013.stdhep  Z_uds_gen_11619_10_014.stdhep  Z_uds_gen_11619_10_015.stdhep  Z_uds_gen_11619_10_016.stdhep  Z_uds_gen_11619_10_017.stdhep  Z_uds_gen_11619_10_018.stdhep  Z_uds_gen_11619_10_019.stdhep  Z_uds_gen_11619_10_020.stdhep  Z_uds_gen_11619_10_021.stdhep  Z_uds_gen_11619_10_022.stdhep  Z_uds_gen_11619_10_023.stdhep  Z_uds_gen_11619_10_024.stdhep  Z_uds_gen_11619_10_025.stdhep  Z_uds_gen_11619_10_026.stdhep  Z_uds_gen_11619_10_027.stdhep  Z_uds_gen_11619_10_028.stdhep  Z_uds_gen_11619_10_029.stdhep  Z_uds_gen_11619_10_030.stdhep  Z_uds_gen_11619_10_031.stdhep  Z_uds_gen_11619_10_032.stdhep  Z_uds_gen_11619_10_033.stdhep  Z_uds_gen_11619_10_034.stdhep  Z_uds_gen_11619_10_035.stdhep  Z_uds_gen_11619_10_036.stdhep  Z_uds_gen_11619_10_037.stdhep  Z_uds_gen_11619_10_038.stdhep  Z_uds_gen_11619_10_039.stdhep  (+61 more)
datamodels/: make_read_and_write.py  run_test.sh
scripts/: ARC_val_plots.py  compare_histos.py  compare_sim_outputs.py  conf.yaml  make_distribution_hists.py  make_distribution_hists.py   make_distribution_plots.py  make_jet_plots.py  make_tracking_plots.py  output_editor.py  plot_runner.py  summary_offsets_example_detailed.txt
scripts/FCCee/ALLEGRO/: ALLEGRO_script.sh
scripts/FCCee/ALLEGRO/ALLEGRO_o1_v03/: ALLEGRO_make_TH1.py  ALLEGRO_make_file.py  ALLEGRO_make_hists.py  ALLEGRO_o1_v03_make_hists.py  ALLEGRO_o1_v03_script.sh  ALLEGRO_val_plots.py
scripts/FCCee/CLD/: ARC_make_hists.py  CLD_script.sh
scripts/FCCee/CLD/CLD_o3_v01/: ARC_make_TH1.py  ARC_make_file.py  ARC_make_hists.py  ARC_standalone_o1_v01_script.sh  ARC_val_plots.py  CLD_o3_v01_script.sh
scripts/FCCee/IDEA/: IDEA_make_hists.py  IDEA_script.sh
scripts/FCCee/IDEA/IDEA_o1_v03/: IDEA_make_TH1.py  IDEA_make_hists.py  (+2 more)
scripts/FCCee/utils/: compare_histos.py  plot_histograms.py  ref.root  send_mail.py  test.ipynb  test.root
scripts/plots/: add_plots.py  make_jet_plots.py  make_tracking_plots.py  template.tex
test/: CMakeLists.txt
tests/: test_datamodel_tags.py
web/python/: index.html  make_web.py
web/templates/: main_index.html  plot_index.html  section_index.html  version_index.html
www/: index.html  script_jinja.py
www/static/: navbar.css  plot.css  styles.css
(+7 files in other folders)
